# Spotify-Advance

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  UV_GUIDE.md  main.py  my_top_tracks.py  playground.ipynb  pyproject.toml  recently_played.py  requirements.txt  saved_tracks.py  setup.cfg  setup.py  top_artists.py  update_recent_files.py  web.py
.github/workflows/: code-quality.yml  docker-build.yml  python-tests.yml
examples_scripts/: main.py
spotify_advance/: __init__.py  utils.py
spotify_advance/apis/: __init__.py  mongodb.py  spotify.py
spotify_advance/datamodels/: album.py  artist.py  saved_track.py  track.py  track_record.py
spotify_advance/handlers/: mongodb.py
src/: __init__.py  album.py  api.py  artist.py  track.py  utils.py
templates/: 404.html  500.html  profile.html  recommend_playlist.html  recommend_results.html  saved_tracks.html  top_artists.html  top_tracks.html
tests/: conftest.py  mongodb_api.py  test_recently_played.py  test_spotify_api_mock.py
