[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify-advance"
version = "0.1.0"
description = "Advanced tools and utilities for interacting with Spotify"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Idan Haviv", email = "haviv1idan@gmail.com"},
]
dependencies = [
    "pyyaml==6.0.1",
    "spotipy==2.25.1",
    "flask==3.0.3",
    "prettytable==3.11.0",
]

[project.optional-dependencies]
dev = [
    "ipython==8.27.0",
    "ipykernel==6.29.5",
    "autopep8==2.3.1",
    "pre-commit==3.8.0",
    "ruff==0.3.3",
    "pytest>=7.0.0",
]

[tool.ruff]
# Python version to target
target-version = "py310"

# Line length
line-length = 127

[tool.ruff.lint]
# Enable linting rules selectively to avoid too many errors initially
select = ["E", "F", "I", "RUF"]

# Ignore most of the annotation related issues for now, since the codebase needs gradual typing updates
ignore = [
    "ANN001", # Missing type annotation for function argument
    "ANN002", # Missing type annotation for *args
    "ANN003", # Missing type annotation for **kwargs
    "ANN101", # Missing type annotation for self in method
    "ANN102", # Missing type annotation for cls in classmethod
    "ANN201", # Missing return type annotation for public function
    "ANN202", # Missing return type annotation for private function
    "ANN204", # Missing return type annotation for special method
    "ANN205", # Missing return type annotation for staticmethod
    "ANN206", # Missing return type annotation for classmethod
    "B019",   # Use of functools.lru_cache on methods
    "RUF010", # Use explicit conversion flag
    "RUF013", # PEP 484 prohibits implicit Optional
    "UP015",  # Unnecessary mode argument
    "SIM108", # Use ternary operator
    "E501",   # Line too long
]

# Allow unused variables when underscored
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Exclude a variety of commonly ignored directories
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "build",
    "dist",
]

[tool.ruff.format]
# Like Black, use double quotes for strings
quote-style = "double"

# Like Black, indent with spaces, rather than tabs
indent-style = "space"

# Like Black, respect magic trailing commas
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending
line-ending = "auto"

[tool.ruff.lint.isort]
known-third-party = ["spotipy", "pytest", "fastapi", "pydantic"]
